# rag-from-scratch

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  rag_from_scratch_10_and_11.ipynb  rag_from_scratch_12_to_14.ipynb  rag_from_scratch_15_to_18.ipynb  rag_from_scratch_19_eval_rag.ipynb  rag_from_scratch_1_to_4.ipynb  rag_from_scratch_20_hybrid_search_and_reranking.ipynb  rag_from_scratch_21_long_context_vs_rag.ipynb  rag_from_scratch_22_graphrag_and_lightrag.ipynb  rag_from_scratch_23_agentic_rag_langgraph.ipynb  rag_from_scratch_24_multimodal_document_rag.ipynb  rag_from_scratch_25_managed_rag_file_search.ipynb  rag_from_scratch_26_production_rag_freshness_security.ipynb  rag_from_scratch_5_to_9.ipynb  rag_providers.py
