[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "RAG from scratch notebooks using LangChain, Gemini, and OpenAI-compatible providers."
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4",
    "chromadb",
    "cohere",
    "google-genai",
    "ipykernel",
    "langchain",
    "langchain-chroma",
    "langchain-community",
    "langchain-cohere",
    "langchain-google-genai",
    "langchain-openai",
    "langchain-text-splitters",
    "langgraph",
    "networkx",
    "openai",
    "python-dotenv",
    "pytube",
    "ragas",
    "rank-bm25",
    "scikit-learn",
    "tiktoken",
    "youtube-transcript-api",
]

[tool.uv]
package = false
